Fixed horizontal overflow issue. Also fixed coloring which caused an odd shadow at hte bottom of the header.

--- a/style.css
+++ b/style.css
@@ -14,13 +14,14 @@ html, body {
 header {
     position:relative;
     height:100vh;
-    width:100%;
+    width:100vw;
+    max-width:100%;
 }
 
 .background {
     height:100%;
     width:100%;
-    background-image:linear-gradient(to bottom, rgba(232, 210, 192, 0.7),rgba(232, 210, 192, 0.7)),url(./assets/header-image.jpg);
+    background-image:linear-gradient(to bottom, rgba(245, 223, 205,.7),rgba(245, 223, 205,.75),rgba(245, 223, 205,1)),url(./assets/header-image.jpg);
     background-size:cover;
     background-position:center;
     filter:blur(4px);
@@ -70,7 +71,7 @@ header {
     bottom:0;
     width:100%;
     height:15%;
-    background-image: linear-gradient(to bottom, rgba(232, 210, 192, 0),rgba(232, 210, 192, .7),rgba(232, 210, 192, 1));
+    background-image: linear-gradient(to bottom, rgba(245, 223, 205,0),rgba(245, 223, 205,.5),rgba(245, 223, 205,1));
     display:flex;
     align-items:center;
     justify-content:center;
@@ -127,7 +128,8 @@ header {
 
 main {
     height:100vh;
-    width:100vw;
+    width:100%;
+    max-width:100%;
 }
 
 
